tests/baselines/reference/functionExpressionInWithBlock.errors.txt
functionExpressionInWithBlock.ts(2,2): error TS1101: 'with' statements are not allowed in strict mode.
functionExpressionInWithBlock.ts(2,2): error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
functionExpressionInWithBlock.ts(3,12): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.


==== functionExpressionInWithBlock.ts (3 errors) ====
    function x() {
     with({}) {
     ~~~~
!!! error TS1101: 'with' statements are not allowed in strict mode.
     ~~~~~~~~
!!! error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
      function f() {
               ~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
       () => this;
      }
     }
    }